@@ -1,5 +1,10 @@
 2006-03-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/gtk/delegates/timeframe.py:
+	  Finetuned menu items' tooltips.
+
+2006-03-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* lib/gaupol/gtk/util/config.py:
 	  (duration_adjust): Do not shorten durations by default.
 
